Archive2/d3/3f4efea8d04ed6/output
main.cpp:4:12: error: use of undeclared identifier 'o'
    return o + o;
           ^
main.cpp:4:16: error: use of undeclared identifier 'o'
    return o + o;
               ^
2 errors generated.
